Add center image opt

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -183,6 +183,16 @@ a.post-title:hover,
     margin-bottom: 30px;
     @extend .rounded;
   }
+  
+  img[src$='#center'] {
+    display: block;
+    margin: 0.7rem auto; /* you can replace the vertical '0.7rem' by
+                            whatever floats your boat, but keep the
+                            horizontal 'auto' for this to work */
+    /* whatever else styles you fancy here */
+    @extend .rounded;
+    }
+
 
   h2,
   h3,
